--- a/nodes/wenode.yaml
+++ b/nodes/wenode.yaml
@@ -32,414 +32,177 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- alterId: 0
-  cipher: auto
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_1
+  password: TN2YqghxeFDKZfLU
+  port: 9037
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: 🇨🇭_CH_瑞士
+  password: 3Vkbowf0PLHJkVMmPFjcA7i/j0ABb6EbYtbe/Xrwuds=
+  port: 59923
+  server: 138.124.51.236
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_2
+  password: ZET59LF6DvCC8KVt
+  port: 9005
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_3
+  password: BwcAUZk8hUFAkDGN
+  port: 9031
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_4
+  password: KnJGad3FqTvjqbaX
+  port: 9014
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
   name: 🇺🇸_US_美国_1
-  network: ws
-  port: 2086
-  server: 104.18.114.188
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+  password: amazonskr05
+  port: 443
+  server: 34.211.105.26
+  type: ss
   udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
+- cipher: chacha20-ietf-poly1305
   name: 🇺🇸_US_美国_2
-  network: ws
-  port: 2086
-  server: 104.18.114.33
-  type: vmess
+  password: u17T3BvpYaaiuW2c
+  port: 443
+  server: 40.172.149.168
+  type: ss
   udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_5
+  password: wfLC2y7rzZyCmuyt
+  port: 9093
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_6
+  password: gYCYXfkUQEs2TaJQ
+  port: 9038
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: 🇨🇳_CN_中国->🇺🇸_US_美国
+  password: MB2IKBDACE0LUEEZ
+  port: 17001
+  server: 113.99.142.152
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
   name: 🇺🇸_US_美国_3
-  network: ws
-  port: 2086
-  server: 104.18.114.69
-  type: vmess
+  password: mps3FwmDjLrWaOVg
+  port: 443
+  server: series-a2.varzesh360.co
+  type: ss
   udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇬🇧_GB_英国->🇨🇦_CA_加拿大
-  network: ws
-  port: 2082
-  server: 194.36.55.4
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_7
+  password: Lp27rqyJq72bZsqX
+  port: 9045
+  server: 217.30.10.18
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
+- cipher: chacha20-ietf-poly1305
+  name: 🇱🇻_LV_拉脱维亚
+  password: f8f7aCzcPKbsF8p3
+  port: 990
+  server: 46.183.217.232
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_8
+  password: p9z5BVADH2YFs3MN
+  port: 9040
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_9
+  password: XPtzA9sCug3SPR4c
+  port: 9025
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_10
+  password: fG2artUmHfNT2cX7
+  port: 9018
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_11
+  password: rNBfNuuANFCAk7KB
+  port: 9056
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
   name: 🇺🇸_US_美国_4
-  network: ws
-  port: 2086
-  server: 104.18.114.118
-  type: vmess
+  password: amazonskr05
+  port: 443
+  server: 54.244.200.142
+  type: ss
   udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_5
-  network: ws
-  port: 2086
-  server: 162.159.45.165
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_6
-  network: ws
-  port: 2086
-  server: 104.18.114.162
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  network: ws
-  port: 2082
-  server: 146.19.21.61
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_7
-  network: ws
-  port: 2086
-  server: 104.26.0.87
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_8
-  network: ws
-  port: 2086
-  server: 104.21.238.37
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_9
-  network: ws
-  port: 2086
-  server: 104.26.0.239
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_10
-  network: ws
-  port: 2086
-  server: 104.18.114.125
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_11
-  network: ws
-  port: 2086
-  server: 104.21.238.148
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_12
-  network: ws
-  port: 2086
-  server: 104.18.114.183
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  network: ws
-  port: 2082
-  server: 190.93.244.1
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_13
-  network: ws
-  port: 2086
-  server: 104.18.114.107
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_14
-  network: ws
-  port: 2086
-  server: 104.26.0.183
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_15
-  network: ws
-  port: 8880
-  server: 104.18.114.56
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 90f8f4dc-8092-4355-9047-05f506f5e9ab
-  ws-opts:
-    headers:
-      host: m1.106778.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_16
-  network: ws
-  port: 2086
-  server: 104.26.0.71
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_17
-  network: ws
-  port: 2086
-  server: 104.18.114.58
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_18
-  network: ws
-  port: 2086
-  server: 104.18.114.122
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_19
-  network: ws
-  port: 2086
-  server: 104.18.114.108
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  network: ws
-  port: 2082
-  server: 45.159.219.89
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_20
-  network: ws
-  port: 2086
-  server: 104.21.238.182
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国_21
-  network: ws
-  port: 2086
-  server: 104.18.114.111
-  type: vmess
-  udp: true
-  uuid: 7d92ffc9-02e1-4087-8a46-cc4d76560917
-  ws-opts:
-    headers:
-      host: e5.808075.xyz
-    path: github.com/Alvin9999
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -448,121 +211,93 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -585,31 +320,24 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇨🇭_CH_瑞士
+  - 🇷🇺_RU_俄罗斯_2
+  - 🇷🇺_RU_俄罗斯_3
+  - 🇷🇺_RU_俄罗斯_4
   - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_5
+  - 🇷🇺_RU_俄罗斯_6
+  - 🇨🇳_CN_中国->🇺🇸_US_美国
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国->🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯_7
+  - 🇱🇻_LV_拉脱维亚
+  - 🇷🇺_RU_俄罗斯_8
+  - 🇷🇺_RU_俄罗斯_9
+  - 🇷🇺_RU_俄罗斯_10
+  - 🇷🇺_RU_俄罗斯_11
   - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
-  - 🇫🇷_FR_法国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇳🇱_NL_荷兰->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
