--- a/nodes/wenode.yaml
+++ b/nodes/wenode.yaml
@@ -32,74 +32,102 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
+- cipher: chacha20-ietf-poly1305
+  name: 🇺🇸_US_美国_1
+  password: xjzsiMfTByKjA9URbdXWNp
+  port: 32091
+  server: 51.120.1.158
+  type: ss
+  udp: true
+- cipher: chacha20-ietf-poly1305
+  name: 🇨🇭_CH_瑞士
+  password: fMcrsQuZhCNiHBmXT80AhQ3mPK5alh/iLuDz4pILlYU=
+  port: 44915
+  server: 138.124.60.136
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  password: amazonskr05
+  port: 443
+  server: 52.89.164.115
+  type: ss
+  udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_1
-  password: QWDDvVE9npNurQfA
-  port: 9026
+  password: EXN3S3eQpjE7EJu8
+  port: 9027
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_2
-  password: rNBfNuuANFCAk7KB
-  port: 9056
+  password: f63gg8EruDnUrmz4
+  port: 9010
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_1
+  name: 🇺🇸_US_美国_2
   password: amazonskr05
   port: 443
-  server: 54.184.77.199
+  server: 44.243.243.198
   type: ss
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_2
-  password: u17T3BvpYaaiuW2c
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_3
+  password: amazonskr05
   port: 443
-  server: series-a2-mec.varzesh360.co
+  server: 54.218.229.170
   type: ss
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 未知
-  password: Yeud3qg58vv3mgu/SIW/2cIphtimMYsTHGBI1jAKF/A=
-  port: 443
-  server: 3.v2.a.www.speedtest.net.2.op.jahesh-tolid.website
+- cipher: aes-128-gcm
+  name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  password: 89b90001-4206-4871-a99d-1744d48f215b
+  port: 4001
+  server: 31.59.111.4
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_3
-  password: BNmAXXxAHYpTRdzu
-  port: 9020
+  password: JdmRK9gMEqFgs8nP
+  port: 9003
   server: 217.30.10.18
   type: ss
   udp: true
-- cipher: chacha20-ietf
-  name: 🇺🇸_US_美国_3
-  password: asd123456
-  port: 8388
-  server: 137.175.97.159
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_4
+  password: fG2artUmHfNT2cX7
+  port: 9018
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇬🇧_GB_英国
-  password: f8f7aCzcPKbsF8p3
-  port: 989
-  server: 51.15.15.82
+  name: 🇷🇺_RU_俄罗斯_5
+  password: FAdUvMJUq5vDgKEq
+  port: 9006
+  server: 217.30.10.18
   type: ss
   udp: true
-- cipher: rc4-md5
-  name: 🇺🇸_US_美国_4
-  password: 14fFPrbezE3HDZzsMOr6
-  port: 8080
-  server: 79.110.53.169
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_6
+  password: UTJA57ypk2XKQpnm
+  port: 9033
+  server: 217.30.10.18
   type: ss
   udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_5
-  password: f8f7aCzcPKbsF8p3
-  port: 990
-  server: 92.118.205.228
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_7
+  password: XPtzA9sCug3SPR4c
+  port: 9025
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_8
+  password: f8npKgNzdkss2ytn
+  port: 9088
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: chacha20-ietf-poly1305
@@ -110,73 +138,73 @@ proxies:
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_4
-  password: KnJGad3FqTvjqbaX
-  port: 9014
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_6
-  password: xjzsiMfTByKjA9URbdXWNp
-  port: 32091
-  server: 51.120.1.158
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_5
-  password: c3NtHJ5ujV2tGDfj
-  port: 9084
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_6
-  password: 9XwYyZsK8SNzQDtY
-  port: 9059
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_7
+  name: 🇷🇺_RU_俄罗斯_9
   password: UkXRsXvR6buDMG2Y
   port: 9001
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_8
+  name: 🇷🇺_RU_俄罗斯_10
   password: TN2YqghxeFDKZfLU
   port: 9037
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_7
+  name: 🇺🇸_US_美国_4
   password: amazonskr05
   port: 443
-  server: 34.211.105.26
+  server: 35.94.51.2
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_9
-  password: Lp27rqyJq72bZsqX
-  port: 9045
-  server: 217.30.10.18
+  name: 🇺🇸_US_美国_5
+  password: amazonskr05
+  port: 443
+  server: 34.215.192.217
   type: ss
   udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_10
-  password: ueLXVkvh4hckhErQ
-  port: 9060
-  server: 217.30.10.18
+- cipher: aes-128-gcm
+  name: 🇧🇬_BG_保加利亚->🇺🇸_US_美国
+  password: shadowsocks
+  port: 443
+  server: 149.34.244.82
   type: ss
   udp: true
-- cipher: aes-256-cfb
+- cipher: chacha20-ietf-poly1305
   name: 🇷🇺_RU_俄罗斯_11
-  password: ZET59LF6DvCC8KVt
-  port: 9005
+  password: ebrYpJsRfFtlKuO2HygBoD
+  port: 20255
+  server: 62.133.63.154
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_12
+  password: S7KwUu7yBy58S3Ga
+  port: 9042
   server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: chacha20-ietf
+  name: 🇨🇳_CN_中国
+  password: asd123456
+  port: 8388
+  server: 194.41.59.80
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_6
+  password: amazonskr05
+  port: 443
+  server: 34.222.132.123
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇺🇸_US_美国_7
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 79.110.53.169
   type: ss
   udp: true
 - cipher: aes-256-cfb
@@ -186,122 +214,67 @@ proxies:
   server: 35.88.126.102
   type: ss
   udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_12
-  password: cp8pRSUAyLhTfVWH
-  port: 9064
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  password: amazonskr05
-  port: 443
-  server: 18.237.72.225
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_9
-  password: amazonskr05
-  port: 443
-  server: 52.89.164.115
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_10
-  password: amazonskr05
-  port: 443
-  server: 54.200.220.184
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_13
-  password: f63gg8EruDnUrmz4
-  port: 9010
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_14
-  password: S7KwUu7yBy58S3Ga
-  port: 9042
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_15
-  password: f8npKgNzdkss2ytn
-  port: 9088
-  server: 217.30.10.18
-  type: ss
-  udp: true
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -310,137 +283,125 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -463,35 +424,32 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
+  - 🇺🇸_US_美国_1
+  - 🇨🇭_CH_瑞士
+  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_1
   - 🇺🇸_US_美国_2
-  - 未知
-  - 🇷🇺_RU_俄罗斯_3
   - 🇺🇸_US_美国_3
-  - 🇬🇧_GB_英国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇱🇻_LV_拉脱维亚
+  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
-  - 🇺🇸_US_美国_6
   - 🇷🇺_RU_俄罗斯_5
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇺🇸_US_美国_7
+  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
   - 🇷🇺_RU_俄罗斯_10
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
   - 🇷🇺_RU_俄罗斯_11
-  - 🇺🇸_US_美国_8
   - 🇷🇺_RU_俄罗斯_12
-  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇷🇺_RU_俄罗斯_13
-  - 🇷🇺_RU_俄罗斯_14
-  - 🇷🇺_RU_俄罗斯_15
+  - 🇨🇳_CN_中国
+  - 🇺🇸_US_美国_6
+  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_8
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
